net: ~−50 lines, 1 real perf fix (saveAll)